force-app/main/default/objects/ApplicationProgramBasedConfig__mdt/ApplicationProgramBasedConfig__mdt.object-meta.xml
<CustomObject>
    <label>Application Program Based Config</label>
    <pluralLabel>Application Program Based Configs</pluralLabel>
</CustomObject>