force-app/main/default/objects/ApplicationProgramBasedConfig__mdt/fields/ConfigValue__c.field-meta.xml
<CustomField>
    <fullName>ConfigValue__c</fullName>
    <label>Config Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>