force-app/main/default/objects/ApplicationProgramBasedConfig__mdt/fields/Intent__c.field-meta.xml
<CustomField>
    <fullName>Intent__c</fullName>
    <label>Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>