force-app/main/default/objects/ApplicationProgramBasedConfig__mdt/fields/ProgramCode__c.field-meta.xml
<CustomField>
    <fullName>ProgramCode__c</fullName>
    <label>Program Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>